--- a/trunk/WacERP/web/css/themes/base/i18n/zh_CN/apps/backend/sfGuardAuth/signin.css
+++ b/trunk/WacERP/web/css/themes/base/i18n/zh_CN/apps/backend/sfGuardAuth/signin.css
@@ -10,7 +10,7 @@ div#login {
 }
 
 div#cap-top {
-	background: transparent url(/images/apps/backend/singin/cap-top.png) no-repeat;
+	background: transparent url(images/cap-top.png) no-repeat;
 	height: 8px;
 	width: 546px;
 }
@@ -21,28 +21,28 @@ div#cap-top {
 
 * html div#cap-top {
 	background-image: none;
-	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/images/apps/backend/singin/cap-top.png", sizingMethod="crop");
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src="images/cap-top.png", sizingMethod="crop");
 }
 
 div#cap-body {
-	background: transparent url(/images/apps/backend/singin/cap-bg.png) repeat-y;
+	background: transparent url(images/cap-bg.png) repeat-y;
 	width: 545px;
 }
 
 * html div#cap-body {
 	background-image: none;
-	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='/images/apps/backend/singin/cap-bg.png', sizingMethod='scale');
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='images/cap-bg.png', sizingMethod='scale');
 }
 
 div#cap-bottom {
-	background: transparent url(/images/apps/backend/singin/cap-bottom.png) no-repeat;
+	background: transparent url(images/cap-bottom.png) no-repeat;
 	height: 15px;
 	width: 546px;
 }
 
 * html div#cap-bottom {
 	background-image: none;
-	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src="/images/apps/backend/singin/cap-bottom.png", sizingMethod="crop");
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src="images/cap-bottom.png", sizingMethod="crop");
 }
 
 div#login div#panelLogin div, div#login div#panelResetPass div, div#login div#panelChangePass div {
