--- a/WacERP/web/WacBaseAppPlugin/css/wac/main.css
+++ b/WacERP/web/WacBaseAppPlugin/css/wac/main.css
@@ -1,3 +1,16 @@
+body {
+    font-family: 宋体,Arial,Helvetica,Verdana,sans-serif;
+    font-size: 11pt;
+    margin: 0;
+    min-height: 100%;
+    padding: 0 0 20px;
+}
+
+.ui-widget {
+    font-family: 宋体,Verdana,Arial,sans-serif;
+    font-size: 11pt;
+}
+
 .wacFormA{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 13px;
