--- a/WacERP/web/WacBaseAppPlugin/css/wac/layout.css
+++ b/WacERP/web/WacBaseAppPlugin/css/wac/layout.css
@@ -344,6 +344,8 @@ span.button-close-east:hover    { background: url(images/ui_layout/go-rt-on.gif)
 .toolboxList .ui-selecting { background: #FECA40; }
 .toolboxList .ui-selected { background: #F39814; color: white; }
 .toolboxList { list-style-type: none; margin: 0; padding: 0; }
-.toolboxList li { cursor: pointer; margin: 3px; padding: 1px; float: left; min-width: 50px; height: 25px; font-size: 11px; font-weight: bold; text-align: center; }
-/*.wac-button-calendar { background: url(images/js_icons/calendar_view_month.png) no-repeat center; }*/
-.ui-icon-wac-calendar { background-image: url('images/js_icons/calendar_view_month.png') }
+.toolboxList li { cursor: pointer; margin: 3px; padding: 1px; float: left; min-width: 50px; height: 25px; font-size: 9pt; text-align: center; }
+
+.ui-button-icon-primary.ui-icon.wac-bi-options{background-image: url(images/js_icons/setting_tools.png) !important;}
+.ui-button-icon-primary.ui-icon.wac-bi-calculator{background-image: url(images/js_icons/calculator_16.png) !important;}
+.ui-button-icon-primary.ui-icon.wac-bi-calendar{background-image: url(images/js_icons/Time-Date-icon.png) !important;}
