--- a/trunk/WacERP/web/WacBaseAppPlugin/css/wac/layout.css
+++ b/trunk/WacERP/web/WacBaseAppPlugin/css/wac/layout.css
@@ -349,3 +349,4 @@ span.button-close-east:hover    { background: url(images/ui_layout/go-rt-on.gif)
 .ui-button-icon-primary.ui-icon.wac-bi-options{background-image: url(images/js_icons/setting_tools.png) !important;}
 .ui-button-icon-primary.ui-icon.wac-bi-calculator{background-image: url(images/js_icons/calculator_16.png) !important;}
 .ui-button-icon-primary.ui-icon.wac-bi-calendar{background-image: url(images/js_icons/Time-Date-icon.png) !important;}
+.ui-button-icon-primary.ui-icon.wac-bi-map{background-image: url(images/js_icons/globe-Vista-icon.png) !important;}
