--- a/trunk/WacERP/web/WacBaseAppPlugin/css/jquery/plugins/jquery.treeview/jquery.treeview.css
+++ b/trunk/WacERP/web/WacBaseAppPlugin/css/jquery/plugins/jquery.treeview/jquery.treeview.css
@@ -26,6 +26,7 @@
 .treeview li { 
 	margin: 0;
 	padding: 3px 0pt 3px 16px;
+        font-size: 9pt;
 }
 
 .treeview a.selected {
@@ -35,7 +36,6 @@
 #treecontrol { margin: 1em 0; display: none; }
 
 .treeview .hover { color: red; cursor: pointer; }
-
 .treeview li { background: url(images/treeview-default-line.gif) 0 0 no-repeat; }
 .treeview li.collapsable, .treeview li.expandable { background-position: 0 -176px; }
 
